--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -51,6 +51,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   robot_feedback.msg
+  robot_command.msg
 )
 
 ## Generate services in the 'srv' folder
