修改以服务方式获取抓夹点

--- a/birl_modular_robot/CMakeLists.txt
+++ b/birl_modular_robot/CMakeLists.txt
@@ -28,6 +28,7 @@ add_service_files(
   positive_solution.srv
   robot_increTransTool.srv
   grasp_point.srv
+  detection_results.srv
 )
 
 generate_messages(
